# bazel-rules-scala-issue

./: .gitignore  README.md  WORKSPACE  jvm-dependencies.yaml
scala-app/: BUILD.bazel
scala-app/src/main/scala/org/example/: Application.scala
shared/protocols/: BUILD.bazel
shared/protocols/event/: A.proto  B.proto  C.proto
