load("@io_bazel_rules_scala//scala_proto:scala_proto.bzl", "scalapb_proto_library")

proto_library(
    name = "A",
    srcs = [ "event/A.proto" ],
    deps = [
        "@com_google_protobuf//:wrappers_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "B",
    srcs = [ "event/B.proto" ],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library(
    name = "C",
    visibility = [ "//visibility:public" ],
    srcs = [ "event/C.proto" ],
    deps = [
        ":A",
        ":B",
    ],
)

scalapb_proto_library(
    name = "all_events_scala_proto",
    visibility = ["//visibility:public"],
    deps = [ ":C" ],
)